[package]
name = "rudra"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
default-run = "rudra"
edition = "2018"
exclude = ["samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "rudra"
test = false
doctest = false

[[bin]]
name = "cargo-rudra"
test = false
doctest = false

[dependencies]
cargo_metadata = "0.11"
chrono = "0.4"
dashmap = "3.11"
fern = "0.6.0"
if_chain = "1.0"
log = "0.4"
maplit = "1.0.2"
once_cell = "1.5.2"
parking_lot = "0.11"
rustc_version = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
snafu = "0.6"
termcolor = "1.1.2"
toml = "0.5.6"
wait-timeout = "0.2"
bitflags = "1.2.1"
which = "4.0"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]
