[package]
name = "crawl"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "unsafe-counter"
test = false
doctest = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
dotenv = "0.15"
flate2 = "1.0"
log = "0.4"
once_cell = "1.3.1"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
semver = "0.9"
tar = "0.4.26"
thiserror = "1.0"
