[package]
name = "crux"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
default-run = "crux"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "crux"
test = false
doctest = false

[[bin]]
name = "cargo-crux"
test = false
doctest = false

[dependencies]
cargo_metadata = "0.10"
dashmap = "3.11"
dotenv = "0.15"
env_logger = "0.7"
if_chain = "1.0"
log = "0.4"
serde = "*"
serde_json = "1.0.53"
