[package]
name = "utility"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "crux-update"
test = false
doctest = false

[[bin]]
name = "poc-test"
test = false
doctest = false

[dependencies]
ansi_term = "0.12.1"
